Fix icon overflow from button.

--- a/style_main.css
+++ b/style_main.css
@@ -91,6 +91,10 @@ QComboBox {
   selection-background-color: rgba(0,140,0,75%);
 }
 
+QPushButton {
+  padding: 1px;
+}
+
 /* QPushButton#button_calcCavity, QPushButton#button_calcSolutions {
   color: #005200;
   background-color: white;
